--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ main {
 .card__title {
   text-align: center;
   font-size: 2.4rem;
-  font-weight: bold;
+  font-weight: 800;
   line-height: 1.5;
 }
 .card__description {
