--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -46,7 +46,8 @@
 
  &__bio {
   line-height: 1.5;
-  text-align: center;
+  font-weight: 400;
+  //   text-align: center;
  }
  &__links {
   display: flex;
