--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-weight: 700;
   width: 100%;
   gap: 16px;
 }
