--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,6 +5,9 @@ body {
  background-color: map-get(map-get(colors.$palette, grey), 900);
  font-family: typo.$font-primary;
  color: map-get(colors.$palette, white);
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
 
 main {
