--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,11 @@ a {
 
 body {
   background-color: hsl(0, 0%, 8%);
-  font-family: "inter", sans-serif;
+  font-family: "inter";
   color: hsl(0, 0%, 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
