--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "inter";
+  font-family: "Inter", sans-serif;
   src: url(../../assets/fonts/Inter-VariableFont_slnt_wght.ttf) format("truetype");
   font-weight: 100 900;
   font-style: normal;
@@ -37,7 +37,7 @@ a {
 
 body {
   background-color: hsl(0, 0%, 8%);
-  font-family: "inter";
+  font-family: "inter", sans-serif;
   color: hsl(0, 0%, 100%);
   display: flex;
   justify-content: center;
