--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,9 +1,9 @@
 @font-face {
- font-family: "inter";
+ font-family: "Inter", sans-serif;
  src: url(../../assets/fonts/Inter-VariableFont_slnt_wght.ttf)
   format("truetype");
  font-weight: 100 900;
  font-style: normal;
 }
 
-$font-primary: "inter";
+$font-primary: "inter", sans-serif;
