--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Inter", sans-serif;
   src: url(../../assets/fonts/Inter-VariableFont_slnt_wght.ttf) format("truetype");
+  font-optical-sizing: auto;
   font-weight: 100 900;
   font-style: normal;
 }
