--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,6 +2,7 @@
  font-family: "Inter", sans-serif;
  src: url(../../assets/fonts/Inter-VariableFont_slnt_wght.ttf)
   format("truetype");
+ font-optical-sizing: auto;
  font-weight: 100 900;
  font-style: normal;
 }
