--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,9 +1,9 @@
 @use "typography" as typo;
 @use "../util/colors" as colors;
 body {
- //  background-color: map-get(map-get(colors.$colors, grey), 700);
  background-color: map-get(map-get(colors.$palette, grey), 900);
- font-family: typo.$font-primary;
+ font-family: "Inter", sans-serif;
+ font-optical-sizing: auto;
  color: map-get(colors.$palette, white);
  display: flex;
  justify-content: center;
