--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-@font-face {
-  font-family: "Inter", sans-serif;
-  src: url(../../assets/fonts/Inter-VariableFont_slnt_wght.ttf) format("truetype");
-  font-optical-sizing: auto;
-  font-weight: 100 900;
-  font-style: normal;
-}
 *,
 *::before,
 *::after {
@@ -68,6 +61,9 @@ main {
 }
 .card__top {
   height: 89px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card img {
   border-radius: 100%;
@@ -82,10 +78,13 @@ main {
   gap: 4px;
 }
 .card__title {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 2.4rem;
   font-weight: 600;
   line-height: 1.5;
+  letter-spacing: 0.5px;
 }
 .card__description {
   text-align: center;
@@ -114,6 +113,7 @@ main {
   color: hsl(0, 0%, 100%);
   font-weight: 600;
   line-height: 1.5;
+  letter-spacing: 0.2px;
 }
 .button:hover {
   background-color: hsl(75, 94%, 57%);
