--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -8,6 +8,7 @@
  color: map-get(colors.$palette, white);
  font-weight: 600;
  line-height: 1.5;
+ letter-spacing: 0.2px;
 
  &:hover {
   background-color: map-get(colors.$palette, green);
