--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -34,11 +34,9 @@
  }
 
  &__title {
-    display: flex;
-    justify-content: center;align-items: center;
-//   text-align: center;
+  text-align: center;
   font-size: 2.4rem;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.5;
   letter-spacing: 0.5px;
  }
