--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -38,7 +38,7 @@
   font-size: 2.4rem;
   font-weight: 600;
   line-height: 1.5;
-  letter-spacing: 0.6px;
+  //   letter-spacing: 0.6px;
  }
 
  &__description {
