--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ a {
   text-decoration: none;
 }
 
+h1 {
+  font-size: 100%;
+}
+
 body {
   background-color: hsl(0, 0%, 8%);
   font-family: "Inter", sans-serif;
@@ -80,7 +84,7 @@ main {
 .card__title {
   text-align: center;
   font-size: 2.4rem;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.5;
 }
 .card__description {
