--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,157 @@
+/* Box sizing rules */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul,
+ol {
+  list-style: none;
   padding: 0;
+  margin: 0;
 }
 
-html,
-body {
-  height: 100%;
+hr {
+  border: 0;
+  margin: 0;
 }
 
-html {
-  font-size: 62.5%;
+/* Set core root defaults */
+html:focus-within {
   scroll-behavior: smooth;
 }
 
+/* Set core body defaults */
 body {
-  min-height: 100vh;
-  font-size: 1.4rem;
+  min-height: 100svh;
+  text-rendering: optimizeSpeed;
 }
 
-img {
-  height: auto;
-}
-
+/* A elements that don't have a class get default styles */
 a {
   text-decoration: none;
 }
 
-h1 {
-  font-size: 100%;
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
 }
 
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
 body {
   background-color: hsl(0, 0%, 8%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
   color: hsl(0, 0%, 100%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-main {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .card {
-  background-color: hsl(0, 0%, 12%);
-  padding: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 24px;
-  border-radius: 12px;
-  width: 384px;
-  margin: 10px;
+  width: 24rem;
+  padding: 2.5rem;
+  background-color: hsl(0, 0%, 12%);
+  border-radius: 0.75rem;
 }
-.card__top {
-  height: 88px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.card img {
+
+.card__image {
+  margin-bottom: 1.5rem;
+  max-width: 88px;
   border-radius: 100%;
-  width: 88px;
   object-fit: cover;
 }
-.card__header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 4px;
-}
+
 .card__title {
-  text-align: center;
-  font-size: 2.4rem;
+  font-size: 1.5625rem;
+  margin-bottom: 2px;
   font-weight: 600;
-  line-height: 1.5;
 }
-.card__description {
-  text-align: center;
-  line-height: 1.5;
+
+.card__address {
+  margin-bottom: 1.5rem;
   font-weight: 700;
   color: hsl(75, 94%, 57%);
 }
-.card__bio {
-  line-height: 1.5;
-  font-weight: 400;
+
+.card__description {
+  margin-bottom: 1.5rem;
 }
+
 .card__links {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-weight: 700;
   width: 100%;
-  gap: 16px;
+  row-gap: 1rem;
 }
 
 .button {
+  padding: 0.75rem;
   background-color: hsl(0, 0%, 20%);
-  padding: 12px;
-  border-radius: 8px;
-  text-align: center;
   color: hsl(0, 0%, 100%);
   font-weight: 600;
-  line-height: 1.5;
+  text-align: center;
+  border-radius: 0.5rem;
+  transition: background-color 0.8s;
 }
 .button:hover {
   background-color: hsl(75, 94%, 57%);
   color: hsl(0, 0%, 20%);
+  font-weight: 600;
+}
+
+.container {
+  min-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
