--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,18 +1,15 @@
-@use "../util/colors" as colors;
+@use "../utils/variables" as variable;
+@use "../utils/functions" as function;
+
 body {
- background-color: map-get(map-get(colors.$palette, grey), 900);
+ background-color: variable.$grey-900;
+ display: flex;
+ justify-content: center;
+ align-items: center;
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
- color: map-get(colors.$palette, white);
- display: flex;
- justify-content: center;
- align-items: center;
-}
-
-main {
- width: 100%;
- height: 100%;
- display: flex;
- justify-content: center;
- align-items: center;
+ font-size: function.to_rem(14px);
+ font-weight: 400;
+ line-height: 1.5;
+ color: variable.$white;
 }
