--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,16 +1,18 @@
-@use "../util/colors" as colors;
+@use "../utils/variables" as variable;
+@use "../utils/functions" as function;
 
 .button {
- background-color: map-get(map-get(colors.$palette, grey), 700);
- padding: 12px;
- border-radius: 8px;
- text-align: center;
- color: map-get(colors.$palette, white);
+ padding: function.to_rem(12px);
+ background-color: variable.$grey-700;
+ color: variable.$white;
  font-weight: 600;
- line-height: 1.5;
+ text-align: center;
+ border-radius: function.to_rem(8px);
+ transition: background-color 0.8s;
 
  &:hover {
-  background-color: map-get(colors.$palette, green);
-  color: map-get(map-get(colors.$palette, grey), 700);
+  background-color: variable.$green;
+  color: variable.$grey-700;
+  font-weight: 600;
  }
 }
