--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,5 +1,7 @@
+@use "../utils/functions" as function;
+
 .container {
- min-width: 100%;
+ width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
