--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,8 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: hsl(0, 0%, 100%);
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .card {
@@ -150,7 +152,7 @@ body {
 }
 
 .container {
-  min-width: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
