--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body {
   font-weight: 600;
   text-align: center;
   border-radius: 0.5rem;
-  transition: background-color 0.8s;
+  transition: background-color 0.8s ease, color 0.8s ease;
 }
 .button:hover {
   background-color: hsl(75, 94%, 57%);
