--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -8,7 +8,7 @@
  font-weight: 600;
  text-align: center;
  border-radius: function.to_rem(8px);
- transition: background-color 0.8s;
+ transition: background-color 0.8s ease, color 0.8s ease;
 
  &:hover {
   background-color: variable.$green;
