--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -25,7 +25,7 @@
  font-weight: 600;
 }
 
-.card__address {
+.card__location {
  margin-bottom: function.to_rem(24px);
  font-weight: 700;
  color: variable.$green;
