--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,8 @@ select {
   }
 }
 body {
-  background-color: hsl(0, 0%, 8%);
+  max-width: 1440px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -89,9 +90,8 @@ body {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
+  background-color: hsl(0, 0%, 8%);
   color: hsl(0, 0%, 100%);
-  max-width: 1440px;
-  margin: 0 auto;
 }
 
 .card {
@@ -118,7 +118,7 @@ body {
   font-weight: 600;
 }
 
-.card__address {
+.card__location {
   margin-bottom: 1.5rem;
   font-weight: 700;
   color: hsl(75, 94%, 57%);
